# agtech-drone-irrigation

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: benchmark.yml  ci.yml  docker.yml
agtech-drone-irrigation/: .dockerignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  requirements-dev.txt  setup.py
agtech-drone-irrigation/.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
agtech-drone-irrigation/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
agtech-drone-irrigation/.github/workflows/: ci.yml  docker.yml
agtech-drone-irrigation/configs/: flir_duo_pro.yaml
agtech-drone-irrigation/docs/: architecture.md  hsv_tuning.md  real_sensor_integration.md
agtech-drone-irrigation/notebooks/: AgTech_Drone_Colab.ipynb
agtech-drone-irrigation/scripts/: batch_process.py  run_pipeline.py
agtech-drone-irrigation/src/: __init__.py
agtech-drone-irrigation/src/dashboard/: __init__.py  callbacks.py
agtech-drone-irrigation/src/data/: loaders.py  synthetic.py
agtech-drone-irrigation/src/pipeline/: segmentation.py
agtech-drone-irrigation/src/utils/: colormap.py  config.py  logger.py
agtech-drone-irrigation/tests/: conftest.py  test_colormap.py  test_config.py  test_loaders.py  test_profiler.py  test_registration.py  test_segmentation.py  test_synthetic.py  test_thermal.py
configs/: default.yaml
docs/: calibration_guide.md
src/dashboard/: app.py
src/data/: __init__.py
src/pipeline/: __init__.py  fusion.py  registration.py  thermal.py
src/utils/: __init__.py  profiler.py
tests/: test_fusion.py  test_integration.py
