[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agtech-drone-irrigation"
version = "1.0.0"
description = "Aerial drone sensor fusion pipeline for precision irrigation"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = ["agtech", "computer-vision", "drone", "thermal", "opencv", "precision-agriculture"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Image Processing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.24,<2.0",
    "opencv-python-headless>=4.8,<5.0",
    "gradio>=4.0,<5.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-xdist>=3.3",
    "ruff>=0.1.0",
    "black>=23.0",
    "mypy>=1.5",
    "pre-commit>=3.4",
]
flir = [
    "flirpy>=0.4",         # FLIR R-JPEG radiometric extraction
]

[project.scripts]
irrigation-demo  = "scripts.run_pipeline:main"
irrigation-batch = "scripts.batch_process:main"

[tool.pytest.ini_options]
testpaths   = ["tests"]
addopts     = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "scripts/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
